[project]
name = "python-cdp-client"
version = "1.4.0"
description = "Python type wrappers for Chrome DevTools Protocol (CDP)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mark E. Haase", email = "mehaase@gmail.com"},
    {name = "Brian Mackintosh", email = "bcmackintosh@gmail.com"},
    {name = "Heraldo Lucena", email = "heraldo.dev@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet"
]
requires-python = ">=3.8,<3.12"
dependencies = [
    "deprecated>=1.2.9",
    "inflection>=0.4.0",
    "aiohttp>=3.8.3"
]

[project.urls]
Homepage = "https://github.com/HMaker/python-cdp"

[project.scripts]
cdpgen = "pycdp.gen.generate:cdpgen"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pycdp*"]

[tool.setuptools.package-data]
"pycdp.cdp" = ["py.typed", "README.md"]
"pycdp.gen" = ["*.json", "README.md"]
